# insightface-wrapper

./: Cargo.toml  README.md  build.sh
src/: cluster.rs  error.rs  face.rs  image.rs  lib.rs  main.rs  math.rs  statistics.rs  utils.rs
