[package]
name = "insightface-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["fetch-models"] }
image = "0.25.8"
insightface = "0.0.3"
ndarray = "0.16.1"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
linfa = "0.8.0"
linfa-clustering = "0.8.0"
uuid = { version = "1.18.1", features = ["fast-rng", "v4"] }
kamadak-exif = "0.6.1"
